; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_system.c_mac_system_check_sysctlbyname.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_system.c_mac_system_check_sysctlbyname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@system_check_sysctlbyname = common dso_local global i32 0, align 4
@mac_system_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_system_check_sysctlbyname(i32 %0, i8* %1, i32* %2, i32 %3, i32 %4, i64 %5, i32 %6, i64 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i64 %5, i64* %14, align 8
  store i32 %6, i32* %15, align 4
  store i64 %7, i64* %16, align 8
  %18 = load i32, i32* @system_check_sysctlbyname, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i8*, i8** %10, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* %12, align 4
  %23 = load i32, i32* %13, align 4
  %24 = load i64, i64* %14, align 8
  %25 = load i32, i32* %15, align 4
  %26 = load i64, i64* %16, align 8
  %27 = call i32 @MAC_CHECK(i32 %18, i32 %19, i8* %20, i32* %21, i32 %22, i32 %23, i64 %24, i32 %25, i64 %26)
  %28 = load i32, i32* %17, align 4
  ret i32 %28
}

declare dso_local i32 @MAC_CHECK(i32, i32, i8*, i32*, i32, i32, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
